--- a/.github/workflows/ci-tests.yaml
+++ b/.github/workflows/ci-tests.yaml
@@ -1,12 +1,12 @@
-name: Integration tests
-on:
-  push:
-    branches:
-    - 'master'
-    - 'release-*'
-  pull_request:
-    branches:
-    - 'master'
+# name: Integration tests
+# on:
+#   push:
+#     branches:
+#     - 'master'
+#     - 'release-*'
+#   pull_request:
+#     branches:
+#     - 'master'
 
 jobs:
   check-go:
